<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">送上门</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="bottom_tab_1">首页</string>
    <string name="bottom_tab_2">我的</string>
    <string name="bottom_tab_3">设置</string>
    <string name="bottom_tab_4">更多</string>
    
    <string name="confirm">确定</string>
    <string name="cancal">取消</string>
    
    <string name="download">下载</string>
    <string name="checking">正在检查\u2026</string>
	<string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="update_msg">有最新的软件包哦，亲快下载吧~</string>
    <string name="update_cancel_msg">您的软件是最新的！</string>
    <string name="download_complete">下载完成</string>
    <string name="download_complete_msg">文件已下载完毕</string>
    <string name="imageviewcontent">imageviewdescribtion</string>
    <string name="username">手机号</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="loginin">登录</string>
    <string name="loginup">注册</string>
    <string name="takeout">外卖</string>
    <string name="seveneleven">便利店</string>
    <string name="service">服务</string>
    <string name="guessyoulike">猜你喜欢</string>
    <string name="verifySettleAccounts">确认结账</string>
    <string name="dishmenu">菜单</string>
    <string name="companyintro">公司简介</string>

</resources>
