<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFFFFF">
    
    <!-- topbar -->
    <LinearLayout
        android:id="@+id/topUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <include
            layout="@layout/top_title_bar" />

    </LinearLayout>
    
    <ImageView 
        android:layout_below="@id/topUserLogin"
        android:id="@+id/oneImageView"
        android:layout_above="@+id/twoLinearLayout"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/imageviewcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_logo"/>
    
    <LinearLayout 
        android:id="@+id/twoLinearLayout"
        android:layout_above="@+id/bottomImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <EditText
	        android:id="@+id/usernameEditText"
	        android:layout_width="278dp"
	        android:layout_height="40dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/edittext_style"
	        android:hint="@string/username"
	        android:inputType="text" />
	    
	    <EditText
	        android:id="@+id/passwordEditText"
	        android:layout_width="278dp"
	        android:layout_height="40dp"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/edittext_style"
	        android:hint="@string/password"
	        android:inputType="textPassword" />
	    
	    <LinearLayout 
	        android:id="@+id/oneLinearLayout"
	        android:layout_marginTop="20dp"
	        android:layout_width="278dp"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_gravity="center_horizontal">
	        
	        <Button
	            android:id="@+id/loginInButton" 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:gravity="center"
	            android:text="@string/loginin"           
	            android:background="@drawable/buttonbg"
	            android:layout_weight="1"/>
	        
	        <Button
	            android:id="@+id/loginUpButton" 
	            android:layout_marginLeft="5dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:gravity="center"
	            android:text="@string/loginup"
	            android:background="@drawable/buttonbg"
	            android:layout_weight="1"/>
        
    	</LinearLayout>
        
    </LinearLayout>
    
    <ImageView 
        android:contentDescription="@string/imageviewcontent"
		android:id="@+id/bottomImageView"		
        android:layout_above="@+id/gap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_image"/>
    
    <!-- 把下面的view注释掉，则发现btnPressed2Talk的marginBottom无效 -->  
    <View 	
        android:id="@+id/gap"
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:layout_alignParentBottom="true"  
           />  

</RelativeLayout>
