<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0" >
    <!-- topbar -->
     <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_title_bar" /> 
        
     
     <LinearLayout 
	    android:gravity="center_vertical" 
	    android:id="@+id/bottom_menu" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content">
	    
	    <Button
	        android:id="@+id/takeoutButton" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:gravity="center_horizontal"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/takeout" 
	        android:drawableTop="@drawable/top_typesone" 
	        android:drawablePadding="10.0dip" 
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom"
	        style="@style/menu"/>

	    <Button 
	       	android:id="@+id/dimestoreButton" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:gravity="center_horizontal"
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/seveneleven" 
	        android:drawableTop="@drawable/top_typestwo" 
	        android:drawablePadding="10.0dip" 
	        android:layout_weight="1.0"
	        android:background="@drawable/bg_bottom" 
	        style="@style/menu"/>
	    
	    <Button 
	        android:id="@+id/serviceButton" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal" 
	        android:textSize="14sp"
	        android:textColor="#625555"
	        android:text="@string/service" 
	        android:drawableTop="@drawable/top_typesthree" 
	        android:drawablePadding="10.0dip" 
	        android:layout_weight="1.0" 
	        android:background="@drawable/bg_bottom"  
	        style="@style/menu"/>
	    
	</LinearLayout>
    
    <TextView 
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/guessyoulike"
        android:textSize="17sp"
        android:textColor="#625555"
        android:gravity="center_vertical"/>
    
    <ListView 
        android:id="@+id/goodsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000"
		android:dividerHeight="7dp">
        
    </ListView>

</LinearLayout>
