<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0" >
    <!-- topbar -->
    <LinearLayout
        android:id="@+id/topShopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/top_title_bar" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/topOneLinearLayout" 
        android:layout_below="@id/topShopMenu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        
        <Button
	        android:id="@+id/tabOneButton" 
	        android:layout_width="match_parent" 
	        android:layout_height="match_parent" 
	        android:textSize="16sp"
	        android:text="@string/dishmenu" 
	        android:layout_weight="1.0" 
	        android:background="@drawable/tabhost_bg"/>

	    <Button 
	       	android:id="@+id/tabTwoButton" 
	        android:layout_width="match_parent" 
	        android:layout_height="match_parent" 
	        android:textSize="16sp"
	        android:text="@string/companyintro" 
	        android:layout_weight="1.0"
	        android:background="@drawable/tabhost_bg" />
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/topOneRelativeLayout"
        android:layout_marginTop="0dp" 
        android:layout_below="@id/topOneLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
         <RelativeLayout
	         android:id="@+id/bottomRelativeLayout" 
	         android:layout_width="match_parent"
	         android:layout_height="40dp"
	         android:layout_alignParentBottom="true"
	         android:background="#303030">
	        
	         <TextView 
	             android:id="@+id/dishNumberAndPriceTextView"
	             android:layout_marginLeft="10dp"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textColor="#FFFFFF"
	             android:layout_alignParentLeft="true"
	             android:layout_centerVertical="true"/>
	         
	         <Button
	             android:id="@+id/menuOrderButton" 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_alignParentRight="true"
	             android:background="@drawable/menu_button_bg"
	             android:layout_centerVertical="true"
	             android:layout_marginRight="10dp"
	             android:text="@string/verifySettleAccounts"/>
	         
	     </RelativeLayout>
	        
	     <LinearLayout 
	         android:layout_above="@id/bottomRelativeLayout"
	         android:layout_width="match_parent"
	         android:layout_height="match_parent"
	         android:orientation="horizontal" 
	         android:baselineAligned="false" >
	         
			 <!-- 菜单 -->
	         <ListView 
	             android:layout_marginLeft="7dp"
	             android:id="@+id/menusListView"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:scrollbars="none"
	             android:divider="#00000000"
				 android:dividerHeight="12dp"
	             android:layout_weight="1">
	             
	         </ListView>
	         
	          <!-- 菜品 -->
	         <ListView 
	             android:layout_marginRight="7dp"
	             android:id="@+id/dishesListView"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:scrollbars="none"
	             android:divider="#e8e8e8"
	             android:dividerHeight="1dp"
	             android:layout_weight="0.4"
	             android:background="@drawable/shopmenubordercolor">
	             
	         </ListView>
	         
	     </LinearLayout>
    </RelativeLayout> 
      
    <RelativeLayout 
        android:layout_marginTop="0dp" 
        android:layout_below="@id/topOneLinearLayout"
        android:id="@+id/topTwoRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
	     
	    <ImageView 
	        android:id="@+id/topImageView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bottom_image" 
	        android:contentDescription="@string/imageviewcontent"/>
        
    </RelativeLayout>

     
</RelativeLayout>
